Add logging via WriterT to monad stack

--- a/art-rank.cabal
+++ b/art-rank.cabal
@@ -15,4 +15,5 @@ Executable art-rank
                   url,
                   HTTP,
                   network,
-                  feed
+                  feed,
+                  filepath
