Add method to clean xml

--- a/art-rank.cabal
+++ b/art-rank.cabal
@@ -16,4 +16,5 @@ Executable art-rank
                   network,
                   feed,
                   filepath,
-                  tagsoup
+                  hxt,
+                  hxt-tagsoup
